--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rust-bevy-game"
+name = "tracer"
 version = "0.1.0"
 authors = ["Jacob Chvatal <jake@isnt.online>"]
 edition = "2018"
@@ -7,7 +7,3 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# enables bevy dynamic linking for compilation time speed increases; see bevy docs.
-# though dyanmic liunking is crrently broken...
-bevy = { version = "0.5" }
-
